examples/test/testpolicy12869.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12869
  namespace: namespace471
spec:
  podSelector:
    matchLabels:
      key17: value42
      key29: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value10
          key25: value32
          key49: value46
      podSelector:
        matchLabels:
          key32: value16
          key15: value27
          key20: value22
